syntax = "proto3";

package dbProto;

service DatabaseService {
    rpc CreateUser (UserCreateRequest) returns (UserModel);
    rpc CreateChat (ChatCreateRequest) returns (ChatModel);
    rpc PostMessage (PostMessageRequest) returns (MessageModel);
    rpc ListUserChats (ListUserChatsRequest) returns (ListUserChatsResponse);
    rpc ListChatMessages (ListChatMessagesRequest) returns (ListChatMessagesResponse);
}

message UserCreateRequest {
    string username = 1;
    //mute json
    int64 created_at = 2;
}

message UserModel {
    int64 id = 1;
    string username = 2;
    int64 created_at = 3; // unix time
}

message ChatCreateRequest {
    string name = 1;
    repeated int64 users = 2;
    //mute json
    int64 created_at = 3;
}

message ChatModel {
    int64 id = 1;
    string name = 2;
    repeated UserModel users = 3;
    int64 created_at = 4; // unix time
}

message PostMessageRequest {
    int64 chat = 1;
    int64 author = 2;
    string text = 3;
    //mute json
    int64 created_at = 4;
}

message MessageModel {
    int64 id = 1;
    int64 chat = 2;
    int64 author = 3;
    string text = 4;
    //mute json
    int64 created_at = 5;
}

message ListUserChatsRequest {
    int64 user = 1;
}

message ListUserChatsResponse {
    repeated ChatModel chats = 1;
}

message ListChatMessagesRequest {
    int64 chat = 1;
}

message ListChatMessagesResponse {
    repeated MessageModel messages = 2;
}
